# manga-vert-split-nn

./: .gitignore  LICENSE  README.md  calibrate.py  detect_breaks.py  detect_breaks_schema.json  export_onnx.py  generate_strips.py  gui_visualizer.py  optimize.py  page_break_metrics.py  page_break_mlflow.py  page_break_model.py  page_break_trainer.py  pyproject.toml
models/BCE Only (v8)/evaluation/: calibration_results.txt  results.txt
models/BCE Only (v8)/final_deployment/: best_model.pth  calibration_results.txt  final_metrics.json  model_config.json  note-on-metrics.txt  page_break_detector.onnx  page_break_detector.onnx.data
models/BCE and EMD/evaluation/: calibration_results.txt  metrics.txt
models/BCE and EMD/final_deployment/: calibration_results.txt  final_metrics.json  model_config.json  page_break_detector.onnx
