[project]
name = "manga-vert-split-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aim>=3.29.1",
    "boto3>=1.42.14",
    "clearml>=2.0.2",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.0",
    "numpy>=2.4.0",
    "onnx>=1.20.0",
    "onnxscript>=0.5.7",
    "opencv-python>=4.11.0.86",
    "optuna>=4.6.0",
    "optuna-integration[pytorch-lightning]>=4.6.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
